# python-extensions

./: .gitignore  README.md  pyproject.toml
daisy_extensions/reactions/: default_denitrification.py
tests/: helpers.py  markers.py
tests/reactions/: test_default_denitrification.py
tests/reactions/test-data/: default-denitrification-args-and-targets.csv  default-denitrification.dai  expected-default-denitrification.csv
